; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/jscript/extr_activex.c_register_activex.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/jscript/extr_activex.c_register_activex.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@TRUE = common dso_local global i32 0, align 4
@FALSE = common dso_local global i32 0, align 4
@CLSID_TestObj = common dso_local global i32 0, align 4
@activex_cf = common dso_local global i32 0, align 4
@CLSCTX_INPROC_SERVER = common dso_local global i32 0, align 4
@REGCLS_MULTIPLEUSE = common dso_local global i32 0, align 4
@S_OK = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [40 x i8] c"Could not register script engine: %08x\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @register_activex to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @register_activex() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = alloca i64, align 8
  %4 = load i32, i32* @TRUE, align 4
  %5 = call i32 @init_registry(i32 %4)
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %11, label %7

7:                                                ; preds = %0
  %8 = load i32, i32* @FALSE, align 4
  %9 = call i32 @init_registry(i32 %8)
  %10 = load i32, i32* @FALSE, align 4
  store i32 %10, i32* %1, align 4
  br label %22

11:                                               ; preds = %0
  %12 = load i32, i32* @CLSCTX_INPROC_SERVER, align 4
  %13 = load i32, i32* @REGCLS_MULTIPLEUSE, align 4
  %14 = call i64 @CoRegisterClassObject(i32* @CLSID_TestObj, i32* @activex_cf, i32 %12, i32 %13, i32* %2)
  store i64 %14, i64* %3, align 8
  %15 = load i64, i64* %3, align 8
  %16 = load i64, i64* @S_OK, align 8
  %17 = icmp eq i64 %15, %16
  %18 = zext i1 %17 to i32
  %19 = load i64, i64* %3, align 8
  %20 = call i32 @ok(i32 %18, i8* getelementptr inbounds ([40 x i8], [40 x i8]* @.str, i64 0, i64 0), i64 %19)
  %21 = load i32, i32* @TRUE, align 4
  store i32 %21, i32* %1, align 4
  br label %22

22:                                               ; preds = %11, %7
  %23 = load i32, i32* %1, align 4
  ret i32 %23
}

declare dso_local i32 @init_registry(i32) #1

declare dso_local i64 @CoRegisterClassObject(i32*, i32*, i32, i32, i32*) #1

declare dso_local i32 @ok(i32, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
